# Linux_CPP_Template

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  compile.sh  main.cpp  startapp.sh
func/: hello.c  hello.h
include/: hello.h
src/: hello.cpp
src/func/: hello.h  world.cpp
